Section header - fixed display on mobile screens

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -107,7 +107,7 @@ li {
 
   @media screen and (max-width: $phoneWidth) {
     flex-wrap: wrap;
-    padding: 0 70px 15px 0;
+    padding: 0 0 15px 0;
   }
 }
 
